<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lySearchArtists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_search_white_48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/str_search_condorify"
            android:textSize="22sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyArtistNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_sentiment_very_dissatisfied_white_48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/str_artist_not_found"
            android:textSize="22sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>


    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/clArtistInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <!--ArtistInfo Panel-->
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayoutArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/ctArtist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginBottom="40dp"
                app:expandedTitleMarginEnd="10dp"
                android:background="@color/colorPrimary"
                app:expandedTitleMarginStart="10dp"
                app:expandedTitleTextAppearance="@style/CollapsedAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/app_name"
                app:titleEnabled="true">

                <RelativeLayout
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/ivArtistCover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:scaleType="fitXY"
                        android:src="@drawable/nirvana" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorBlackTransparency"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tvArtistName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nirvana"
                            android:textColor="@android:color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_sentiment_very_satisfied_white_48dp" />

                            <TextView
                                android:id="@+id/tvFollowers"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:paddingEnd="0dp"
                                android:paddingStart="5dp"
                                android:text="1000"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="6"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/str_popularity_minimum"
                                    android:textColor="@android:color/white"
                                    android:textSize="14sp" />

                                <com.daasuu.ahp.AnimateHorizontalProgressBar
                                    android:id="@+id/pbPopularity"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:max="100"
                                    android:paddingEnd="10dp"
                                    android:paddingStart="3dp"
                                    android:progress="50"
                                    app:ahp_backgroundColor="@color/colorPrimaryDark"
                                    app:ahp_progressColor="@color/colorPrimary" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.5"
                                android:gravity="start"
                                android:text="@string/str_popularity_max"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>


                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarArtist"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/white"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!--List of artist albums-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvAlbums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>